<resources>
    <string name="app_name">Cal</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="Clear">C</string>
    <string name="Divide">÷</string>
    <string name="Sum">+</string>
    <string name="minus">-</string>
    <string name="Multi">*</string>
    <string name="equal">=</string>
    <string name="point">.</string>
</resources>